test/visibility/use-no-qualified/basic-error2.good
basic-error2.chpl:10: In function 'main':
basic-error2.chpl:11: error: 'A' undeclared (first use this function)
